force-app/main/default/objects/blng__PaymentScheduler__c/blng__PaymentScheduler__c.object-meta.xml
<CustomObject>
    <customHelpPage>blng__PaymentSchedulerHelp</customHelpPage>
    <label>Payment Scheduler</label>
    <nameField>
        <label>Payment Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>