force-app/main/default/objects/blng__PaymentScheduler__c/fields/blng__IncludeAllCurrencies__c.field-meta.xml
<CustomField>
    <fullName>blng__IncludeAllCurrencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include All Currencies</label>
    <type>Checkbox</type>
</CustomField>