force-app/main/default/objects/blng__PaymentScheduler__c/fields/blng__Startdateandtime__c.field-meta.xml
<CustomField>
    <fullName>blng__Startdateandtime__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Start Date and Time</label>
    <type>DateTime</type>
</CustomField>