force-app/main/default/objects/blng__PaymentScheduler__c/fields/blng__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Determines which invoices to pay based on the target date defined in billing configuration settings. Target date can be on or after the invoice date or invoice due date.</description>
    <inlineHelpText>Determines which invoices to pay based on the target date defined in billing configuration settings. Target date can be on or after the invoice date or invoice due date.</inlineHelpText>
    <label>Target Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>