force-app/main/default/objects/blng__PaymentScheduler__c/fields/blng__TargetDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDayOfMonth__c</fullName>
    <label>Target Day Of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PreferredBillingDay</valueSetName>
    </valueSet>
</CustomField>