force-app/main/default/objects/blng__PaymentScheduler__c/fields/blng__TargetDayofWeek__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDayofWeek__c</fullName>
    <label>Target Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfWeek</valueSetName>
    </valueSet>
</CustomField>