force-app/main/default/objects/blng__PaymentScheduler__c/fields/blng__Type__c.field-meta.xml
<CustomField>
    <fullName>blng__Type__c</fullName>
    <description>Type of Schedule.
Once - Payment Scheduler will be done only one time.
Daily - Payment Scheduler will be repeated continuously daily and so on</description>
    <inlineHelpText>Type of Schedule.
Once - Payment Scheduler will be done only one time.
Daily - Payment Scheduler will be repeated continuously daily and so on</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__SchedulerType</valueSetName>
    </valueSet>
</CustomField>