force-app/main/default/objects/blng__PaymentScheduler__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__TargetDate__c</columns>
    <columns>blng__ApexJobId__c</columns>
    <columns>blng__PaymentBatches__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Payment Schedulers</label>
</ListView>